--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ***REMOVED***
 server.contextPath=/
 ***REMOVED***
-spring.jackson.date-format=io.swagger.RFC3339DateFormat
+spring.jackson.date-format=de.risikominimierungarztpraxen.queuingApp.RFC3339DateFormat
 ***REMOVED***
