Some renaming to conform to standards (added suffix dto and so on)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 springfox.documentation.swagger.v2.path=/api-docs
 server.contextPath=/
 server.port=8080
-spring.jackson.date-format=de.risikominimierungarztpraxen.queuingApp.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
 # Enabling H2 Console
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 spring.datasource.url=jdbc:h2:~/testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
