--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ***REMOVED***
 server.contextPath=/
 ***REMOVED***
-spring.jackson.date-format=de.risikominimierungarztpraxen.queuingApp.RFC3339DateFormat
 ***REMOVED***
 
 # Enabling H2 Console
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 spring.datasource.url=jdbc:h2:~/testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
