--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <finalName>queue-service</finalName>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
