--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 springfox.documentation.swagger.v2.path=/api-docs
-server.contextPath=/
+server.servlet.context-path=/
 server.port=8080
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
-# Enabling H2 Console
+# Enabling H2 Console. DISABLE WHEN IN PRODUCTION!!!!
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.datasource.url=jdbc:h2:~/testdb
@@ -12,3 +12,11 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
+
+
+#################################
+# Configuration for sending SMS #
+#################################
+twilio-account-sid=
+twilio-auth-token=
+twilio-sender-name=AppPointment
