Added first implementation of real notification sending.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 ***REMOVED***
-server.contextPath=/
+***REMOVED***
 ***REMOVED***
 ***REMOVED***
 
-# Enabling H2 Console
+***REMOVED***
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.datasource.url=jdbc:h2:~/testdb
@@ -12,3 +12,11 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
+
+
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***AppPointment
