Added twilio-testaccount. Fixed some problems with startup on "our" server at heidecloud.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,19 +4,19 @@
 ***REMOVED***
 
 ***REMOVED***
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
-spring.datasource.url=jdbc:h2:~/testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
 
 
 ***REMOVED***
 ***REMOVED***
 ***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***AppPointment
+***REMOVED***AC7d90e653ca85fef7bf84670c67bcbda2
+***REMOVED***0dcc547f5d720fac073667d3c7f3d580
+***REMOVED***+12057367351
