--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <start-class>de.apppointment.queuingserver.AppPointmentQueuingServer</start-class>
         <springfox-version>2.9.2</springfox-version>
     </properties>
     <parent>
@@ -17,18 +18,14 @@
         <version>2.2.5.RELEASE</version>
     </parent>
     <build>
-        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+        <finalName>queue-service</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <configuration>
+                    <executable>true</executable>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -42,7 +39,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <finalName>queue-service</finalName>
+                    <excludes>
+                        <exclude>**/application.properties</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
@@ -76,14 +75,19 @@
         </dependency>
 
         <!-- DB -->
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.h2database</groupId>-->
+<!--            <artifactId>h2</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.18</version>
         </dependency>
     <!-- Bean Validation API support -->
         <dependency>
