--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,19 +4,19 @@ server.port=8080
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
 # Enabling H2 Console. DISABLE WHEN IN PRODUCTION!!!!
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
-spring.datasource.url=jdbc:h2:~/testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+#spring.h2.console.enabled=true
+#spring.h2.console.settings.web-allow-others=true
+#spring.datasource.url=jdbc:h2:~/testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create
 
 
 #################################
 # Configuration for sending SMS #
 #################################
-twilio-account-sid=
-twilio-auth-token=
-twilio-sender-name=AppPointment
+twilio-account-sid=AC7d90e653ca85fef7bf84670c67bcbda2
+twilio-auth-token=0dcc547f5d720fac073667d3c7f3d580
+twilio-sender-name=+12057367351
