Removed twilio-testaccount data before push to github.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@
 ***REMOVED***
 ***REMOVED***
 ***REMOVED***
-***REMOVED***AC7d90e653ca85fef7bf84670c67bcbda2
-***REMOVED***0dcc547f5d720fac073667d3c7f3d580
-***REMOVED***+12057367351
+***REMOVED***
+***REMOVED***
+***REMOVED***
