Removed twilio-testaccount data before push to github.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 #################################
 # Configuration for sending SMS #
 #################################
-twilio-account-sid=AC7d90e653ca85fef7bf84670c67bcbda2
-twilio-auth-token=0dcc547f5d720fac073667d3c7f3d580
-twilio-sender-name=+12057367351
+twilio-account-sid=
+twilio-auth-token=
+twilio-sender-name=
